Changes in version 1.3.1 (?? Mar 2007)

 - getType() is now const correct (API Changes)


 - Added scissor test to opengl draw2DImage method that ignored clip.

 - Fixed a bug in rect::isValid, it was almost always true.

GUI:

  - Added setColor and setScaleImage to GUIImage.

  - Made GUIListBox clip properly.

  - added getOSOperator to GUIEnvironment (for clipboard access in elements) and updated CGUIEditBox.

  - Can now load/save gui environment from/to an element.

GUI Editor:

  - Added cut/copy/paste using clipboard and xml (via memory file). Will have problems in Linux due to no clipboard support

  - Added texture attribute element


Changes in version 1.3 (15 Mar 2007)

- SMaterial structure changed:
   - Enable Irrlicht to change TextureAddress Mode (Clamping), for each layer separately
   - Added Texture matrices to SMaterial for all texture layers
   - Removed the anonymous union/struct access to textures and material flags.
	  Now, Texture1..4 is removed - use Textures[i] instead
	  The Flags[x] is replaced by setFlags(x, bool) resp. getFlags(x)

- The methods OnPreRender and OnPostRender of ISceneNode have been changed to OnAnimate and 
  OnRegisterSceneNode(). Also, they are now called at different times: OnAnimate is called
  every frame before anything else, removing the one-frame-lag Irrlicht suffered until now.
  To make most of your own scene nodes work again, it should be enough to rename OnPreRender()
  to OnAnimate() and OnPostRender() to OnRegisterSceneNode() in most cases.

- ISceneNode::getMaterialCount and getMaterial now use u32 instead of s32. You will also need 
  to update this in your custom scene nodes.

- matrix4 speed enhancement, testing for identity before multiply. faster check for identity
  for the positive case using an additional boolean flag.
  The internal array M is now private, changing the API. Use mat[x] instead of mat.M[x].
  The pointer to M is acquired by mat.pointer(), some methods take a matrix4 reference 