@@ -13,7 +13,7 @@ namespace irr
 namespace core
 {
 
-const float fast_atof_table[] =	{
+const float fast_atof_table[16] =	{  // we write [16] here instead of [] to work around a swig bug
 										0.f,
 										0.1f,
 										0.01f,
