@@ -7,6 +7,11 @@ Changes in version 1.3.1 (?? Mar 2007)
 
  - Fixed a bug in rect::isValid, it was almost always true.
 
+ - Added query methods to scene manager: Find Scene nodes by type
+    getSceneNodesFromType
+
+ - Added min and max functions with 3 values: core::min_ and core::max_
+
 GUI:
 
   - Added setColor and setScaleImage to GUIImage.
@@ -24,6 +29,7 @@ GUI Editor:
   - Added texture attribute element
 
 
+-------------------------------------------
 Changes in version 1.3 (15 Mar 2007)
 
 - SMaterial structure changed:
